k8s_configs/ingress/infra-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-public
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra
                port:
                  number: 8080
