k8s_configs/ingress/infra.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /infra
        pathType: Prefix
        backend:
          service:
            name: infra
            port:
              number: 8080
